--- a/social.html
+++ b/social.html
@@ -106,8 +106,8 @@
                     <div class="icon tgrm su"></div><a href="https://tgrm.su/channels/" target="_blank">tgrm.su</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Социум. Прокачка канала. (Условие: чтобы добавить любой канал в каталог +79 рублей. Поднятия канала в ТОП: 250р/три дня; 500р/на неделю; 1500/на месяц)" alt=""></div><span class="opisi">79р.+top250р.</span>
                   </li>
-                  <!-- тут реклама от ГУГЛ - 3 колонки-вконце 336-280-->
-                  <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="7850904161"></ins>
+                  <!-- тут реклама от ГУГЛ - 3 колонки-вконце 336-280script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+                  --><ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="3116540473"></ins>
                   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
                   <!-- тут реклама от ГУГЛ-->
                 </ul>
@@ -168,8 +168,8 @@
                   <li>
                     <div class="icon odnogrupniki com ua"></div><a href="https://odnogrupniki.com.ua/reg32138" target="_blank">Odnogrupniki.com.ua`</a>
                   </li>
-                  <!-- тут реклама от ГУГЛ - 3 колонки 32050+-->
-                  <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="1111124042"></ins>
+                  <!-- тут реклама от ГУГЛ - 3 колонки 320+50script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+                  --><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="5338066053"></ins>
                   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
                   <!-- тут реклама от ГУГЛ-->
                 </ul>
@@ -233,8 +233,8 @@
                   <li>
                     <div class="icon mail ex ua"></div><a href="https://mail.ex.ua/" target="_blank">mail.ex.ua</a>
                   </li>
-                  <!-- тут реклама от ГУГЛ - 3 колонки 32050+-->
-                  <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="1111124042"></ins>
+                  <!-- тут реклама от ГУГЛ - 3 колонки 320+50script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+                  --><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="5338066053"></ins>
                   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
                   <!-- тут реклама от ГУГЛ-->
                 </ul>
