--- a/media.html
+++ b/media.html
@@ -77,11 +77,11 @@
                 <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.зарубежная playlist.2019.04</span></div>
                 <ul>
                   <li>
-                    <div class="icon a0download"> </div><a>Скачать:</a><a href="https://turbo.to/zrzpjo2fwvrd.html" target="_blank">
-                      <div class="icontooinfo a-1_cifra" title="Скачать 1-ю часть" alt=""></div></a><a href="https://turbo.to/jnszk7degb16.html" target="_blank">
-                      <div class="icontooinfo a-2_cifra" title="Скачать 2-ю часть" alt=""></div></a><a href="https://turbo.to/5b0adfddeqzh.html" target="_blank">
-                      <div class="icontooinfo a-3_cifra" title="Скачать 3-ю часть" alt=""></div></a><a href="https://turbo.to/06vnr9ys7llg.html" target="_blank">
-                      <div class="icontooinfo a-4_cifra" title="Скачать 4-ю часть" alt=""></div></a><a href="https://turbo.to/r2me6l6gk4uj.html" target="_blank">
+                    <div class="icon a0download"> </div><a>Скачать:</a><a href="https://turbo.to/tf88zuhcvaml.html" target="_blank">
+                      <div class="icontooinfo a-1_cifra" title="Скачать 1-ю часть" alt=""></div></a><a href="https://turbo.to/ggqp9mnjvefq.html" target="_blank">
+                      <div class="icontooinfo a-2_cifra" title="Скачать 2-ю часть" alt=""></div></a><a href="https://turbo.to/srlsd6rjg34g.html" target="_blank">
+                      <div class="icontooinfo a-3_cifra" title="Скачать 3-ю часть" alt=""></div></a><a href="https://turbo.to/569n4spdei4i.html" target="_blank">
+                      <div class="icontooinfo a-4_cifra" title="Скачать 4-ю часть" alt=""></div></a><a href="https://turbo.to/m9kirfcq9s3s.html" target="_blank">
                       <div class="icontooinfo a-5_cifra" title="Скачать 5-ю часть" alt=""></div></a>
                     <div class="icontooinfo a0zippass" title="заархивировано/пароль: zakladki"></div><a href="https://youtu.be/A4TSFq5P4O8" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как скачать" alt=""></div></a>
