--- a/bank.html
+++ b/bank.html
@@ -102,15 +102,19 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Торговые площадки (фиат+криптовалюта)</span></div>
+                <div class="group-title"><span class="badge badge-success">Торговые площадки криптовалюты</span></div>
                 <ul>   
                   <li>
                     <div class="icon tradingview_com"></div><a href="https://ru.tradingview.com/" target="_blank">tradingview.com</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. Графики акций, индексов, фьючерсов, Форекс и биткоин в реальном времени на TradingView" alt="">       </div>
+                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. Полезный инструмент - графики акций, индексов, фьючерсов, Форекс и биткоин в реальном времени на TradingView" alt="">       </div>
+                  </li>
+                  <li>
+                    <div class="icon binance_com"></div><a href="https://www.binance.com/?ref=36762801" target="_blank">binance.com`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. ТОП биржа и трейдинг платформа криптовалют" alt=""></div>
                   </li>
                   <li>
                     <div class="icon exmo_com"></div><a href="https://exmo.com/?ref=1654818" target="_blank">exmo.com`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. Биткоин биржа и трейдинг платформа" alt=""></div>
+                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. ТОП биткоин биржа и трейдинг платформа. Возможность работы с грн. руб. visa, mastercart" alt=""></div>
                   </li>
                   <li>
                     <div class="icon bitfinex com"></div><a href="https://www.bitfinex.com/?locale=ru" target="_blank">bitfinex.com</a>
