--- a/index.html
+++ b/index.html
@@ -427,6 +427,11 @@
                 <ul>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon binance_com"></div><a href="https://www.binance.com/?ref=36762801" target="_blank">binance.com`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Банкинг. ТОП биржа и трейдинг платформа криптовалют" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon dok dbroker com ua"></div><a href="https://letyshops.com/r/dok-ua-4qh7st6ahuecw8" target="_blank">dok.dbroker.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет – магазин автозапчастей DOK. Тут можно купить запчасти для иномарок. Каталог запчастей. Помощь в подборе и поиск автозапчастей, лучшая цена и доставка по Украине." alt=""></div>
                   </li>
