--- a/index.html
+++ b/index.html
@@ -423,8 +423,13 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2019-05-08</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2019-06-30</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Добавлены MP3 плееры</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки" alt=""></div>
+                  </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon binance_com"></div><a href="https://www.binance.com/?ref=36762801" target="_blank">binance.com`</a>
@@ -496,11 +501,6 @@
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon maximoda com ua"></div><a href="https://letyshops.com/r/maximoda-ua-4qh7st5x32g40c" target="_blank">maximoda.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Обновлен MP3 плеер</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Медиа. Обновлен плеер для прослушивания зарубежной музыки" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
