--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 <ul>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Добавлены MP3 плееры</a>
+                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Новвые.MP3.плееры</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки" alt=""></div>
                   </li>
                   <li>
