--- a/media.html
+++ b/media.html
@@ -74,7 +74,7 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.зарубежная playlist.2019.04</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.ЗАРУБЕЖНАЯ (playlist.2019.04)</span></div>
                 <ul>
                   <li>
                     <div class="icon a0download"> </div><a>Скачать:</a><a href="https://turbo.to/pzqefb54uvmh.html" target="_blank">
@@ -136,7 +136,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.украинская playlist.2019.06</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.УКРАИНСКАЯ (playlist.2019.06)</span></div>
                 <ul>
                   <li>
                     <div class="icon a0download"> </div><a>Скачать:</a><a href="https://turbo.to/15j9ntij07n3.html" target="_blank">
@@ -202,7 +202,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.русская playlist.2019.06</span></div>
+                <div class="group-title"><span class="badge badge-warning">Плеер.ТОП.РУССКАЯ (playlist.2019.06)</span></div>
                 <ul>
                   <li>
                     <div class="icon a0download"> </div><a>Скачать:</a><a href="https://turbo.to/me7zzjp6a66o.html" target="_blank">
