--- a/communal.html
+++ b/communal.html
@@ -91,7 +91,7 @@
                     <div class="icon prostobank ua"></div><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/gas_tariff" target="_blank">prostobank.ua</a><span class="opisi">цена.газ</span>
                   </li>
                   <li>
-                    <div class="icon naftogazpostach com"></div><a href="https://naftogazpostach.com/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span>
+                    <div class="icon naftogazpostach com"></div><a href="https://gas.ua/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span>
                   </li>
                   <li>
                     <div class="icon gasolina-online com"></div><a href="https://gasolina-online.com/" target="_blank">gasolina</a><span class="opisi">Кабинет.Газ.(старый)</span>
@@ -164,6 +164,9 @@
                   </li>
                   <li>
                     <div class="icon shtorm net"></div><a href="https://www.shtorm.net/uk" target="_blank">shtorm.net</a><span class="opisi">Shtorm</span>
+                  </li>
+                  <li>
+                    <div class="icon skylink_vk"></div><a href="http://sky-link.com.ua/" target="_blank">sky-link.com.ua</a><span class="opisi">Sky-link</span>
                   </li>
                 </ul>
               </div>
