--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com</a><span class="opisi">оф.цена.газ</span>
                   </li>
                   <li>
-                    <div class="icon naftogazpostach com"></div><a href="https://naftogazpostach.com/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span>
+                    <div class="icon naftogazpostach com"></div><a href="https://gas.ua/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span>
                   </li>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com</a><span class="opisi">оф.цена.электр.</span>
@@ -237,6 +237,9 @@
                     <div class="icontooinfo a0repa3" title="Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні" alt=""></div><a href="https://youtu.be/4accV-xUU30" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком" alt=""></div></a><a href="https://youtu.be/nsknyxq9alo" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
+                  </li>
+                  <li>
+                    <div class="icon skylink_vk"></div><a href="http://sky-link.com.ua/" target="_blank">sky-link.com.ua</a><span class="opisi">Sky-link</span>
                   </li>
                   <li>
                     <div class="icon kyivstar ua"></div><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a>
