--- a/bank.html
+++ b/bank.html
@@ -256,7 +256,7 @@
             </div>
           </div>
           <div class="col-sm footer-col">
-            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://telegram.me/zakladki_chats" target="_blank" title="Telegram: https://t.me/zakladki_chats"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Видеоинструкция: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
+            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/joinchat/H_Y66VFScFxfUigt5lgS1Q" target="_blank" title="Telegram: ЧАТ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Видеоинструкция: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok">
