--- a/media.html
+++ b/media.html
@@ -264,7 +264,7 @@
                     <div class="icon web telegram org"></div><a href="https://t.me/music_breakbeat" target="_blank">t/music_breakbeat (hit_bit)</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a href="https://t.me/music_hit_zakladki" target="_blank">t/music_hit_zakladki</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a href="https://t.me/music_hitok" target="_blank">t/music_HitOK (hit_bit)</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
