--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                     <div class="icon rozetka com ua"></div><a href="https://letyshops.com/r/rozetka-4qh7st5csxa88w" target="_blank">rozetka.com.ua`</a>
                   </li>
                   <li>
-                    <div class="icon allo ua"></div><a href="https://letyshops.com/r/allo-4qh7st5csxicso" target="_blank">allo.ua`</a>
+                    <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-4qh7st5csxogcc" target="_blank">stylus.ua`</a>
                   </li>
                   <li>
                     <div class="icon eldorado ua"></div><a href="https://letyshops.com/r/eldorado-ua-4qh7st5csxicso" target="_blank">eldorado.ua`</a>
@@ -344,7 +344,7 @@
                     <div class="icon bonprix ua"></div><a href="https://letyshops.com/r/bonprix-ua-4qh7st5csygwc8" target="_blank">bonprix.ua`</a>
                   </li>
                   <li>
-                    <div class="icon apteka911 com ua"></div><a href="https://letyshops.com/r/apteka-911-4qh7st5ct08woo" target="_blank">apteka911.com.ua`</a>
+                    <div class="icon apteka24 ua"></div><a href="https://letyshops.com/r/apteka24-4qh7st5ct0cggg" target="_blank">apteka24.ua`</a>
                   </li>
                 </ul>
               </div>
@@ -493,11 +493,6 @@
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon telemart ua"></div><a href="https://" target="_blank">telemart.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет-магазин Телемарт — магазин техники, электроники и комплектующих для ПК в Украине" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon avic ua"></div><a href="https://letyshops.com/r/avic-ua-4qh7st5x3jc4cc" target="_blank">avic.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. AVIC - удобный интернет магазин - лучшие цены, доставка по Украине, широкий ассортимент товаров, скидки и распродажи! 10 лет на рынке продаж!" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
