--- a/shops.html
+++ b/shops.html
@@ -146,7 +146,7 @@
                     <div class="icon rozetka com ua"></div><a href="https://letyshops.com/r/rozetka-4qh7st5csxa88w" target="_blank">rozetka.com.ua`</a>
                   </li>
                   <li>
-                    <div class="icon allo ua"></div><a href="https://letyshops.com/r/allo-4qh7st5csxicso" target="_blank">allo.ua`</a>
+                    <div class="icon allo ua"></div><a href="https://allo.ua" target="_blank">allo.ua</a>
                   </li>
                   <li>
                     <div class="icon eldorado ua"></div><a href="https://letyshops.com/r/eldorado-ua-4qh7st5csxicso" target="_blank">eldorado.ua`</a>
@@ -167,7 +167,7 @@
                     <div class="icon f ua"></div><a href="https://letyshops.com/r/f-ua-tot-samyi-magazin-4qh7st5csy04gw" target="_blank">f.ua`</a>
                   </li>
                   <li>
-                    <div class="icon comfy ua"></div><a href="https://letyshops.com/r/comfy-ua-4qh7st5csy2o8s" target="_blank">comfy.ua`</a>
+                    <div class="icon comfy ua"></div><a href="https://comfy.ua" target="_blank">comfy.ua</a>
                   </li>
                   <li>
                     <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o" target="_blank">xiaomi.ua`</a>
@@ -180,7 +180,7 @@
                     <div class="icon shop kyivstar ua"></div><a href="https://letyshops.com/r/kyivstar-4qh7st5ct12cog" target="_blank">shop.kyivstar.ua`</a>
                   </li>
                   <li>
-                    <div class="icon avic ua"></div><a href="https://letyshops.com/r/avic-ua-4qh7st5x3jc4cc" target="_blank">avic.ua`</a>
+                    <div class="icon avic ua"></div><a href="https://avic.ua" target="_blank">avic.ua</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. AVIC - удобный интернет магазин - лучшие цены, доставка по Украине, широкий ассортимент товаров, скидки и распродажи! 10 лет на рынке продаж!" alt=""></div>
                   </li>
                   <li>
@@ -216,7 +216,7 @@
                     <div class="icon autoklad ua"></div><a href="https://www.autoklad.ua/" target="_blank">autoklad.ua</a>
                   </li>
                   <li>
-                    <div class="icon avtoopt in ua"></div><a href="https://letyshops.com/r/avtoopt-ua-4qh7st5csyeckc" target="_blank">avtoopt.in.ua`</a>
+                    <div class="icon avtoopt in ua"></div><a href="https://avtoopt.in.ua" target="_blank">avtoopt.in.ua</a>
                   </li>
                   <li>
                     <div class="icon avtodiski net ua"></div><a href="https://letyshops.com/r/avtodiski-ua-4qh7st5csygwc8" target="_blank">avtodiski.net.ua`</a>
@@ -276,7 +276,7 @@
                     <div class="icon berni com ua"></div><a href="https://letyshops.com/r/berni-4qh7st5cszy8k4" target="_blank">berni.com.ua`</a>
                   </li>
                   <li>
-                    <div class="icon garnamama com"></div><a href="https://letyshops.com/r/garnamama-ua-4qh7st5x2qecgk" target="_blank">garnamama.com`</a>
+                    <div class="icon garnamama com"></div><a href="https://garnamama.com" target="_blank">garnamama.com</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Купить детскую одежду в Киеве от украинских производителей. Доставка детской одежды по Киеву и всей Украине" alt=""></div>
                   </li>
                 </ul>
@@ -298,7 +298,7 @@
                     <div class="icon ostrivkrasy com"></div><a href="https://letyshops.com/r/ostriv-krasi-4qh7st5csyyo0g" target="_blank">ostrivkrasy.com`</a>
                   </li>
                   <li>
-                    <div class="icon edp ua"></div><a href="https://letyshops.com/r/eau-de-parfum-ua-4qh7st5csz6sk8" target="_blank">edp.ua`</a>
+                    <div class="icon edp ua"></div><a href="https://edp.ua" target="_blank">edp.ua</a>
                   </li>
                   <li>
                     <div class="icon nyxcosmetic com ua"></div><a href="https://letyshops.com/r/nyx-professional-makeup-ua-4qh7st5cszacc4" target="_blank">nyxcosmetic.com.ua`</a>
@@ -323,7 +323,7 @@
                 <div class="group-title"><span class="badge badge-success">Здоровье</span></div>
                 <ul>
                   <li>
-                    <div class="icon apteka911 com ua"></div><a href="https://letyshops.com/r/apteka-911-4qh7st5ct08woo" target="_blank">apteka911.com.ua`</a>
+                    <div class="icon apteka911 com ua"></div><a href="https://apteka911.com.ua" target="_blank">apteka911.com.ua</a>
                   </li>
                   <li>
                     <div class="icon apteka24 ua"></div><a href="https://letyshops.com/r/apteka24-4qh7st5ct0cggg" target="_blank">apteka24.ua`</a>
@@ -364,13 +364,13 @@
                     <div class="icon yakaboo ua"></div><a href="https://letyshops.com/r/yakaboo-4qh7st5cszy8k4" target="_blank">yakaboo.ua`</a>
                   </li>
                   <li>
-                    <div class="icon grenka ua"></div><a href="https://letyshops.com/r/grenka-ua-4qh7st5ct02sc0" target="_blank">grenka.ua`</a>
+                    <div class="icon grenka ua"></div><a href="https://grenka.ua" target="_blank">grenka.ua</a>
                   </li>
                   <li>
                     <div class="icon bambook com"></div><a href="https://letyshops.com/r/bambook-ua-4qh7st5ct06c4w" target="_blank">bambook.com`</a>
                   </li>
                   <li>
-                    <div class="icon booklya ua"></div><a href="https://letyshops.com/r/booklya-ua-4qh7st5ct06c4w" target="_blank">booklya.ua`</a>
+                    <div class="icon booklya ua"></div><a href="https://www.booklya.ua" target="_blank">booklya.ua</a>
                   </li>
                   <li>
                     <div class="icon book24 ua"></div><a href="https://letyshops.com/r/book24-ua-4qh7st5ct08woo" target="_blank">book24.ua`</a>
