--- a/index.html
+++ b/index.html
@@ -430,8 +430,28 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2019-06-30</span></a></div>
+                <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2019-09-19</span></a></div>
                 <ul>
+                  <li>
+                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://gas.ua/ua/gas/article/pobutovi-spozhivachi-mozhut-zekonomiti-do-25-na-oplati-za-gaz" target="_blank">ГАЗОВИЙ ЗАПАС</a>
+                    <div class="icontooinfo a0repa3" title="ГАЗОВИЙ ЗАПАС - ПЛАТІТЬ ЗА ГАЗ ДО 25% МЕНШЕ. Побутові споживачі можуть зекономити до 25% на оплаті за газ" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon cardo ua"></div><a href="https://letyshops.com/r/cardo-4qh7st7rrpuso8" target="_blank">cardo.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине." alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon citrus ua"></div><a href="https://letyshops.com/r/citrus-ua-4qh7st7rrmskgo" target="_blank">citrus.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет-магазин Цитрус — гаджеты и аксессуары" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon russian alibaba com"></div><a href="https://letyshops.com/r/alibaba-4qh7st7rrfuo0g" target="_blank">russian.alibaba.com`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Алибаба Alibaba, крупнейшая в мире онлайн B2B торговая платформа. Алибаба предлагает качественных производителей, поставщиков, экспортеров, импортеров, покупателей, оптовиков и товары." alt=""></div>
+                  </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Новые.MP3.плееры</a>
@@ -441,11 +461,6 @@
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon binance_com"></div><a href="https://www.binance.com/?ref=36762801" target="_blank">binance.com`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Банкинг. ТОП биржа и трейдинг платформа криптовалют" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon dok dbroker com ua"></div><a href="https://letyshops.com/r/dok-ua-4qh7st6ahuecw8" target="_blank">dok.dbroker.com.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет – магазин автозапчастей DOK. Тут можно купить запчасти для иномарок. Каталог запчастей. Помощь в подборе и поиск автозапчастей, лучшая цена и доставка по Украине." alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
@@ -461,18 +476,8 @@
                   </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon watsons ua"></div><a href="https://letyshops.com/r/watsons-ua-4qh7st6a66ucwo" target="_blank">watsons.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Товари для краси та здоровя Інтернет-магазина Watsons Україна" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon forum zakladki"></div><a href="http://zakladki.at.ua/forum/25-6-1#7" target="_blank">Н.КОМУНАЛКА+зміни</a>
                     <div class="icontooinfo a0repa3" title="Ваш Форум по комунальним розрахункам" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://www.ukrinform.ru/rubric-economy/2673413-pravitelstvo-obazalo-naftogaz-snizit-cenu-na-gaz-dla-naselenia.html" target="_blank">Упадет цена на ГАЗ!</a>
-                    <div class="icontooinfo a0repa3" title="За апрель будем уже платить по 8.38грн./куб (была цена 8.55грн./куб)" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
@@ -483,26 +488,6 @@
                     <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
                     <div class="icon ru airbnb com"></div><a href="https://letyshops.com/r/airbnb-4qh7st5x4ayoc0" target="_blank">ru.airbnb.com`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Сдайте дом, квартиру или комнату и получайте дополнительный доход. Создание объявления абсолютно бесплатно. Отпускное жилье, дома, впечатления и места: находите приключения поблизости или далеко от дома, открывайте для себя уникальное жилье, впечатления и места по всему миру. " alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon starkbud com ua"></div><a href="https://letyshops.com/r/starkbud-ua-4qh7st5x3rwgk4" target="_blank">starkbud.com.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Строительные материалы по лучшим ценам - интернет-магазин СтаркБуд" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon telemart ua"></div><a href="https://" target="_blank">telemart.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет-магазин Телемарт — магазин техники, электроники и комплектующих для ПК в Украине" alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon dressa com ua"></div><a href="https://letyshops.com/r/dressa-ua-4qh7st5x3aqswk" target="_blank">dressa.com.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Dressa - Стильная и модная женская одежда, обувь и аксессуары на любой сезон от производителя." alt=""></div>
-                  </li>
-                  <li>
-                    <div class="icon a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
-                    <div class="icon maximoda com ua"></div><a href="https://letyshops.com/r/maximoda-ua-4qh7st5x32g40c" target="_blank">maximoda.com.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. MaxiModa - интернет-магазин модной женской одежды, обуви и аксессуаров из Украины (Киев, Мелитополь)" alt=""></div>
                   </li>
                   <li>
                     <div class="icon a0info-opis5" title="Полезная информация" alt=""></div>
