--- a/shops.html
+++ b/shops.html
@@ -135,6 +135,10 @@
                   <li>
                     <div class="icon ebay com"></div><a href="https://letyshops.com/r/ebay-4qh7st5csx6og0" target="_blank">ebay.com`</a>
                   </li>
+                  <li>
+                    <div class="icon russian alibaba com"></div><a href="https://letyshops.com/r/alibaba-4qh7st7rrfuo0g" target="_blank">russian.alibaba.com`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Алибаба Alibaba, крупнейшая в мире онлайн B2B торговая платформа. Алибаба предлагает качественных производителей, поставщиков, экспортеров, импортеров, покупателей, оптовиков и товары." alt=""></div>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -168,6 +172,10 @@
                   </li>
                   <li>
                     <div class="icon comfy ua"></div><a href="https://comfy.ua" target="_blank">comfy.ua</a>
+                  </li>
+                  <li>
+                    <div class="icon citrus ua"></div><a href="https://letyshops.com/r/citrus-ua-4qh7st7rrmskgo" target="_blank">citrus.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет-магазин Цитрус — гаджеты и аксессуары" alt=""></div>
                   </li>
                   <li>
                     <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-4qh7st5csy680o" target="_blank">xiaomi.ua`</a>
@@ -254,6 +262,10 @@
                   <li>
                     <div class="icon dressa com ua"></div><a href="https://letyshops.com/r/dressa-ua-4qh7st5x3aqswk" target="_blank">dressa.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Dressa - Стильная и модная женская одежда, обувь и аксессуары на любой сезон от производителя." alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon cardo ua"></div><a href="https://letyshops.com/r/cardo-4qh7st7rrpuso8" target="_blank">cardo.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине." alt=""></div>
                   </li>
                 </ul>
               </div>
