--- a/media.html
+++ b/media.html
@@ -95,6 +95,9 @@
                       </script>
                     </div>
                   </li>
+                  <li>
+                    <div class="icon web telegram org"></div><a>Слушать и качать:</a><a href="https://t.me/music_hitok" target="_blank">music_HitOK</a><i class="fainfo fab fa-telegram"></i>
+                  </li>
                 </ul>
               </div>
               <div class="group">
@@ -261,10 +264,10 @@
                     <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a href="https://t.me/music_breakbeat" target="_blank">t/music_breakbeat (hit_bit)</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a href="https://t.me/music_breakbeat" target="_blank">music_breakbeat (hit_bit)</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a href="https://t.me/music_hitok" target="_blank">t/music_HitOK (hit_bit)</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a href="https://t.me/music_hitok" target="_blank">music_HitOK (hit_bit)</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
