updates link shops

--- a/media.html
+++ b/media.html
@@ -96,7 +96,7 @@
                     </div>
                   </li>
                   <li>
-                    <div class="icon web telegram org"></div><a>Слушать и качать:</a><a href="https://t.me/music_hitok" target="_blank">music_HitOK</a><i class="fainfo fab fa-telegram"></i>
+                    <div class="icon web telegram org"></div><a>Еще музыка:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
@@ -156,6 +156,9 @@
                         
                       </script>
                     </div>
+                  </li>
+                  <li>
+                    <div class="icon web telegram org"></div><a>Еще музыка:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
@@ -222,6 +225,9 @@
                         
                       </script>
                     </div>
+                  </li>
+                  <li>
+                    <div class="icon web telegram org"></div><a>Еще музыка:  </a><a href="https://t.me/music_hitok" target="_blank">_music_HitOK_</a><i class="fainfo fab fa-telegram"></i>
                   </li>
                 </ul>
               </div>
