--- a/shops.html
+++ b/shops.html
@@ -194,6 +194,22 @@
                   <li>
                     <div class="icon coffeeok com ua"></div><a href="https://letyshops.com/r/kofeyok-ua-4qh7st5csy680o" target="_blank">coffeeok.com.ua`</a>
                   </li>
+                  <li>
+                    <div class="icon krauff com"></div><a href="https://letyshops.com/r/krauff-ua-4qh7st7rujcwss" target="_blank">krauff.com`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Krauff – немецкая элитная посуда. Самый полный каталог посуды Krauff. Бесплатная доставка. Гарантия качества." alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon lekos com ua"></div><a href="https://letyshops.com/r/lekos-ua-4qh7st7rvd6o88" target="_blank">lekos.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Купить наручные часы в Украине в Интернет-магазине наручных часов LEKOS" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon originalam net"></div><a href="https://letyshops.com/r/originalam-4qh7st7rveecco" target="_blank">originalam.net`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Все для печати. Предлагаем купить СБПЧ для печатающих устройств Epson, Canon, HP и Brother, перезаправляемые картриджи (ПЗК) и фотобумага. Продажа принтеров, МФУ, плоттеров с установленной системой НПЧ. Мы также производим ремонт печатающих устройств любых фирм." alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon kivi ua"></div><a href="https://letyshops.com/r/kivi-ua-4qh7st7rvfggg0" target="_blank">kivi.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Kivi (Ківі) - Smart телевізори та телебачення в Україні №1. Вибрати телевізор нового покоління KIVI. Купити Смарт тв з можливістю управління через смартфон. В телевізорах KIVI використовуються дисплеї топових конфігурацій від світових виробників. Подаруйте собі можливість насолоджуватись усіма кольорами і відтінками світу разом з KIVI" alt=""></div>
+                  </li>
                 </ul>
               </div>
               <div class="group">
@@ -267,6 +283,22 @@
                     <div class="icon cardo ua"></div><a href="https://letyshops.com/r/cardo-4qh7st7rrpuso8" target="_blank">cardo.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Официальный интернет-магазин брендовой одежды Cardo. ★ Фирменная одежда от бренда Cardo. ✈ Доставка по всей Украине." alt=""></div>
                   </li>
+                  <li>
+                    <div class="icon prego ua"></div><a href="https://letyshops.com/r/prego-ua-4qh7st7rum0www" target="_blank">prego.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин обуви в Киеве ✿ Обувь PREGO ✿ Широкий ассортимент модной и брендовой обуви и сумок по доступным ценам ➦ Доставка по Украине" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon ager ua"></div><a href="https://letyshops.com/r/ager-ua-4qh7st7rur6s0o" target="_blank">ager.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет-магазин Ager - мужская и женская одежда оптом и в розницу. Низкие цены. Дропшиппинг. Совместные покупки. Акции и скидки каждый день." alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon sneakerstudio com ua"></div><a href="https://letyshops.com/r/sneakerstudio-ua-4qh7st7rusqo0c" target="_blank">sneakerstudio.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Продажа кроссовок, обуви ✔ оригинальные бренды ✔ бесплатная доставка ✔цены ниже, чем у конкурентов" alt=""></div>
+                  </li>
+                  <li>
+                    <div class="icon puccini ua"></div><a href="https://letyshops.com/r/puccini-ua-4qh7st7rv9ycgw" target="_blank">puccini.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Чемоданы, галантерея, кожаные сумки по выгодной цене прямо от производителя. Широкий ассортимент дорожных сумок, кошельков, перчаток и мужских ремней в интернет-магазин Puccini" alt=""></div>
+                  </li>
                 </ul>
               </div>
               <div class="group">
@@ -286,6 +318,10 @@
                   </li>
                   <li>
                     <div class="icon berni com ua"></div><a href="https://letyshops.com/r/berni-4qh7st5cszy8k4" target="_blank">berni.com.ua`</a>
+                  </li>
+                  <li>
+                    <div class="icon honestgoods com ua"></div><a href="https://letyshops.com/r/honestgoods-ua-4qh7st7rvbeoos" target="_blank">honestgoods.com.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Подгузники, памперсы, детское питание, детские книги. Интернет магазин детских товаров в Украине. Купить подгузники и детское питание с доставкой - Honest Goods﻿" alt=""></div>
                   </li>
                   <li>
                     <div class="icon garnamama com"></div><a href="https://garnamama.com" target="_blank">garnamama.com</a>
@@ -314,6 +350,10 @@
                   </li>
                   <li>
                     <div class="icon nyxcosmetic com ua"></div><a href="https://letyshops.com/r/nyx-professional-makeup-ua-4qh7st5cszacc4" target="_blank">nyxcosmetic.com.ua`</a>
+                  </li>
+                  <li>
+                    <div class="icon notino com"></div><a href="https://letyshops.com/r/notino-ua-4qh7st7ru2kg8o" target="_blank">notino.com`</a>
+                    <div class="icontooinfo a0repa3" title="Раздел-Магазины. Iнтернет магазин парфумів: Парфуми в акції тижня ✓ Широкий вибір парфумерії та косметики ✓ Гарантія безпечної покупки – Пункт видачі в Києві." alt=""></div>
                   </li>
                   <li>
                     <div class="icon gold ua"></div><a href="https://letyshops.com/r/gold-ua-4qh7st5cszacc4" target="_blank">gold.ua`</a>
