--- a/communal.html
+++ b/communal.html
@@ -111,7 +111,7 @@
                     <div class="icon prostobank ua"></div><a href="http://www.prostobank.ua/spravochniki/indikatory_rynka/electric_tariff" target="_blank">prostobank.ua</a><span class="opisi">цена.электр.</span>
                   </li>
                   <li>
-                    <div class="icon kresc com ua"></div><a href="http://kresc.com.ua/index.html" target="_blank">kresc.com.ua</a><span class="opisi">Киров.ОЕК</span>
+                    <div class="icon kresc com ua"></div><a href="http://www.kresc.com.ua/index.html" target="_blank">kresc.com.ua</a><span class="opisi">Киров.ОЕК</span>
                   </li>
                   <li>
                     <div class="icon kiroe com ua"></div><a href="http://kiroe.com.ua/" target="_blank">kiroe.com</a><span class="opisi">Кабин.обленерго.стар</span>
