--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com</a><span class="opisi">оф.цена.электр.</span>
                   </li>
                   <li>
-                    <div class="icon kresc com ua"></div><a href="http://kresc.com.ua/payment.html" target="_blank">kresc.com.ua</a><span class="opisi">Електро.ОЕК</span>
+                    <div class="icon kresc com ua"></div><a href="http://www.kresc.com.ua/payment.html" target="_blank">kresc.com.ua</a><span class="opisi">Електро.ОЕК</span>
                   </li>
                   <li>
                     <div class="icon ukrtelecom ua"></div><a href="https://new.ukrtelecom.ua/payment/#generate-bill" target="_blank">ukrtelecom</a><span class="opisi">Укртел.СЧЕТ</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
